--- a/src/assets/components/Card.css
+++ b/src/assets/components/Card.css
@@ -21,26 +21,40 @@
 }
 
 .container{
-    padding-left:20px;
+    padding-left:30px;
+    padding-right:30px;
     display:flex;
 }
 
 .post-image{
-    width: 170px;
-    height: 170px;
+    max-width: 500px;
+    max-height: 300px;
+    margin-left:50px;
+    padding-top:30px;
+}
+
+.post-top{
+    display:flex;
+    margin-right:10px;
+    text-align: left;
+    align-items: center;
 }
 
 .post-bottom{
     display:flex;
-    margin-right: 10px;
+    margin-left:30px;
     align-items: center;
 }
 
 .post-title{
     color:white;
     font-size:25px;
-    text-align: left;
-    margin-bottom:10px;
+    margin-right:15px;
+}
+
+.timestamp{
+    font-size:15px;
+    color:rgb(150, 150, 150);
 }
 
 .post-description{
@@ -53,9 +67,9 @@
     max-width: 99%;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 6; /* Limit to 8 lines */
+    -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
     white-space: normal;
-    line-height: 1.4; /* Adjust as needed for line spacing */
+    line-height: 1.5; 
 }
