--- a/src/assets/pages/info.css
+++ b/src/assets/pages/info.css
@@ -30,3 +30,29 @@
 .info-horizontal-line{
     border-color:rgb(170, 156, 156, 0.5);
 }
+
+.each-comment{
+    text-align: left;
+    border: 2px solid black;
+    border-radius:5px;
+    margin-bottom: 10px;
+    padding:4px;
+}
+
+.each-comment-top{
+    display:flex;
+    align-items: center;
+    margin-bottom:0px;
+    margin-left:7px;
+}
+
+.comment-timestamp{
+    margin-bottom:5px;
+    margin-left:10px;
+    font-size:10px;
+}
+
+.comment-text{
+    margin-top:0px;
+    margin-left:7px;
+}
