--- a/src/assets/pages/ReadCard.css
+++ b/src/assets/pages/ReadCard.css
@@ -20,3 +20,18 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);   
     margin-top:0px;
 }
+
+.searchBar{
+    display:flex;
+    margin-left:65px;
+    margin-bottom:20px;
+    margin-top:10px;
+}
+
+#searchButton{
+    padding:5px;
+}
+
+#searchInput{
+    font-size:16px;
+}
