did some formatting and added post count

--- a/src/assets/pages/ReadCard.css
+++ b/src/assets/pages/ReadCard.css
@@ -21,11 +21,16 @@
     margin-top:0px;
 }
 
-.searchBar{
+.searches{
     display:flex;
+    justify-content: space-between;
     margin-left:65px;
     margin-bottom:20px;
     margin-top:10px;
+}
+.searchBar{
+    display:flex;
+    margin-right:65px;
 }
 
 #searchButton{
@@ -34,4 +39,9 @@
 
 #searchInput{
     font-size:16px;
+}
+
+#sortOrderSelect{
+    font-size:14px;
+    padding:5px;
 }
