--- a/src/assets/pages/CreateCard.css
+++ b/src/assets/pages/CreateCard.css
@@ -1,11 +1,34 @@
-.pic2{
-    width:300px;
+* {
+    box-sizing: border-box;
 }
 
-label{
-    font-size:20px;
+.label {
+    font-size: 20px;
+    text-align: left;
 }
 
-.color-selection{
-    font-size:15px;
+.create-form {
+    border: 5px solid #8e8e90;
+    background-color: #8e8e90;
+    border-radius: 5px;
+    padding: 10px;
+    max-width: 1000px;
+    width: 100%;
+    text-align: right;
+    margin:0 auto;
+    margin-bottom: 50px;
+}
+
+#description,
+#title,
+#image {
+    width: 100%;
+    resize: vertical;
+    padding: 10px;
+    font-size: 16px;
+    width:800px;
+}
+
+#description {
+    height: 200px; 
 }
