--- a/src/assets/components/Card.css
+++ b/src/assets/components/Card.css
@@ -24,6 +24,7 @@
     padding-left:30px;
     padding-right:30px;
     display:flex;
+    justify-content: space-between;
 }
 
 .post-image{
@@ -54,6 +55,9 @@
     color:white;
     font-size:25px;
     margin-right:15px;
+    max-width:500px;
+    overflow:hidden;
+    max-height:120px;
 }
 
 .timestamp{
@@ -76,4 +80,15 @@
     text-overflow: ellipsis;
     white-space: normal;
     line-height: 1.5; 
+}
+
+.upvote-img{
+    width:45px;
+    margin-right:6px;   
+}
+
+.upvote-img:hover{
+    transform: scale(1.05);
+    background-color:rgba(101, 101, 101, 0.219);
+    border-radius:10px;
 }
