--- a/src/assets/pages/info.css
+++ b/src/assets/pages/info.css
@@ -13,7 +13,7 @@
 
 .info-title{
     font-size:35px;
-    text-align: left;
+    text-align: center;
     margin-left:60px;
     margin-right:60px;
     max-width:800px;
